// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/UserProfile should match snapshot 1`] = `
<Fragment>
  <ProfilePopoverController
    hideStatus={false}
    overwriteName=""
    triggerButtonContainerClass="user-popover"
    userId="user_id"
    userProfileSrc="/api/v4/users/undefined/image?_=0"
  >
    <button
      className="style--none"
    >
      nickname
    </button>
  </ProfilePopoverController>
</Fragment>
`;

exports[`components/UserProfile should match snapshot, when displayUsername is enabled 1`] = `
<Fragment>
  <ProfilePopoverController
    hideStatus={false}
    overwriteName=""
    triggerButtonContainerClass="user-popover"
    userId="user_id"
    userProfileSrc="/api/v4/users/undefined/image?_=0"
  >
    <button
      className="style--none"
    >
      @username
    </button>
  </ProfilePopoverController>
</Fragment>
`;

exports[`components/UserProfile should match snapshot, when popover is disabled 1`] = `
<div
  className="user-popover"
>
  nickname
</div>
`;

exports[`components/UserProfile should match snapshot, when user is shared 1`] = `
<Fragment>
  <ProfilePopoverController
    hideStatus={false}
    overwriteName=""
    triggerButtonContainerClass="user-popover"
    userId="user_id"
    userProfileSrc="/api/v4/users/undefined/image?_=0"
  >
    <button
      className="style--none"
    >
      nickname
    </button>
  </ProfilePopoverController>
  <SharedUserIndicator
    className="shared-user-icon"
  />
</Fragment>
`;

exports[`components/UserProfile should match snapshot, with colorization 1`] = `
<Fragment>
  <ProfilePopoverController
    hideStatus={false}
    overwriteName=""
    triggerButtonContainerClass="user-popover"
    userId="user_id"
    userProfileSrc="/api/v4/users/undefined/image?_=0"
  >
    <button
      className="style--none"
      style={
        Object {
          "color": "#bbd279",
        }
      }
    >
      nickname
    </button>
  </ProfilePopoverController>
</Fragment>
`;
